--- a/src/styles.css
+++ b/src/styles.css
@@ -57,5 +57,7 @@ img {
 
 p {
   font-family: "Indie Flower", cursive;
-  margin-top: 50%;
+  margin-top: 20%;
+  text-align: center;
+  font-size: 20px;
 }
