--- a/src/styles.css
+++ b/src/styles.css
@@ -59,7 +59,7 @@ p {
 .icon img {
   width: 30px;
   display: block;
-  margin-left: 20px;
+  text-align: left;
   margin-top: 15%;
   margin-bottom: 20%;
 }
