--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@ body {
   border-color: aliceblue;
   margin-top: 5%;
   margin-bottom: 5%;
-  background-color: aliceblue;
+  background-color: rgba(242, 233, 228, 0.3);
 }
 h1 {
   color: #555b6e;
