--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,7 @@ body {
   border-color: aliceblue;
   width: 900px;
   margin-top: 5%;
+  margin: 0 auto;
   margin-bottom: 5%;
   background-color: rgba(242, 233, 228, 0.5);
 }
