--- a/src/styles.css
+++ b/src/styles.css
@@ -11,21 +11,21 @@ body {
   background-color: rgba(242, 233, 228, 0.5);
 }
 h1 {
-  color: #4a4e69;
+  color: #735d78;
   font-family: "Indie Flower", cursive;
   text-align: right;
   margin-top: 15%;
   margin-bottom: 0%;
 }
 h2 {
-  color: #4a4e69;
+  color: #735d78;
   font-family: "Indie Flower", cursive;
   text-align: right;
   margin-top: 1%;
   margin-bottom: 0%;
 }
 h3 {
-  color: #4a4e69;
+  color: #735d78;
   font-family: "Indie Flower", cursive;
   text-align: right;
   margin-top: 1%;
@@ -34,7 +34,7 @@ h3 {
 
 .card-header {
   text-align: center;
-  font-family: "Krona One", sans-serif;
+  font-family: "Patrick Hand", cursive;
   color: #b392ac;
   font-size: 15px;
 }
@@ -44,7 +44,7 @@ h3 {
 }
 .card-text {
   text-align: center;
-  font-family: "Krona One", sans-serif;
+  font-family: "Patrick Hand", cursive;
   color: #b392ac;
 }
 .row {
