--- a/src/styles.css
+++ b/src/styles.css
@@ -73,5 +73,12 @@ p {
 }
 
 .btn-outline-success {
+  background-color: white;
+  text-decoration-color: #735d78;
+  border: #735d78;
+}
+
+.btn-outline-success:hover {
   background-color: #735d78;
+  text-decoration-color: antiquewhite;
 }
