--- a/src/styles.css
+++ b/src/styles.css
@@ -74,7 +74,7 @@ p {
 
 .btn-outline-success {
   background-color: white;
-  text-decoration-color: #735d78;
+  color: #735d78;
   border-color: #735d78;
 }
 
