--- a/src/styles.css
+++ b/src/styles.css
@@ -76,6 +76,7 @@ p {
   background-color: #735d78;
   color: antiquewhite;
   border-color: antiquewhite;
+  font-family: "Indie Flower", cursive;
 }
 
 .btn-outline-success:hover {
