--- a/src/styles.css
+++ b/src/styles.css
@@ -35,7 +35,7 @@ h3 {
 
 .card-header {
   text-align: center;
-  font-family: "Patrick Hand", cursive;
+  font-family: "Indie Flower", cursive;
   color: #b392ac;
   font-size: 20px;
 }
@@ -45,7 +45,7 @@ h3 {
 }
 .card-text {
   text-align: center;
-  font-family: "Patrick Hand", cursive;
+  font-family: "Indie Flower", cursive;
   color: #b392ac;
 }
 .row {
