--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://images.unsplash.com/photo-1514477917009-389c76a86b68?ixlib=rb-1.2.1&auto=format&fit=crop&w=1322&q=80");
+  background-image: url("https://cdn.shopify.com/s/files/1/1555/7781/products/Cloudy_Night_SMALL_1080x.jpg?v=1538052354");
 }
 .weatherapp {
   border: double;
