--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,7 @@ body {
   background-color: rgba(242, 233, 228, 0.5);
 }
 h1 {
-  color: #1f7a8c;
+  color: #60808e;
   font-family: "Indie Flower", cursive;
   text-align: right;
   margin-top: 15%;
