--- a/src/styles.css
+++ b/src/styles.css
@@ -11,21 +11,21 @@ body {
   background-color: rgba(242, 233, 228, 0.5);
 }
 h1 {
-  color: #60808e;
+  color: #735d78;
   font-family: "Indie Flower", cursive;
   text-align: right;
   margin-top: 15%;
   margin-bottom: 0%;
 }
 h2 {
-  color: #1f7a8c;
+  color: #735d78;
   font-family: "Indie Flower", cursive;
   text-align: right;
   margin-top: 1%;
   margin-bottom: 0%;
 }
 h3 {
-  color: #1f7a8c;
+  color: #735d78;
   font-family: "Indie Flower", cursive;
   text-align: right;
   margin-top: 1%;
