--- a/src/styles.css
+++ b/src/styles.css
@@ -11,14 +11,14 @@ body {
   background-color: rgba(242, 233, 228, 0.5);
 }
 h1 {
-  color: #735d78;
+  color: aliceblue;
   font-family: "Indie Flower", cursive;
   text-align: right;
   margin-top: 15%;
   margin-bottom: 0%;
 }
 h2 {
-  color: #735d78;
+  color: aliceblue;
   font-family: "Indie Flower", cursive;
   text-align: right;
   margin-top: 1%;
