--- a/src/styles.css
+++ b/src/styles.css
@@ -25,7 +25,7 @@ h2 {
   margin-bottom: 0%;
 }
 h3 {
-  color: #735d78;
+  color: aliceblue;
   font-family: "Indie Flower", cursive;
   text-align: right;
   margin-top: 1%;
