--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,7 @@ body {
   width: 900px;
   margin-top: 5%;
   margin: 0 auto;
-  margin-bottom: 5%;
+  margin-bottom: none;
   background-color: rgba(242, 233, 228, 0.5);
 }
 h1 {
