--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,10 @@ body {
   margin-bottom: none;
   background-color: rgba(242, 233, 228, 0.5);
 }
+
+.justify-content-around {
+  height: 260px;
+}
 h1 {
   color: aliceblue;
   font-family: "Indie Flower", cursive;
