--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,7 @@ body {
 
 .justify-content-around {
   height: 260px;
+  padding-top: none;
 }
 h1 {
   color: aliceblue;
@@ -62,7 +63,7 @@ h3 {
   margin-bottom: 3px;
   border-bottom: 10px;
   height: 280px;
-  padding-bottom: 20px;
+  padding-bottom: none;
 }
 
 p {
