--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,9 @@ body {
   margin-bottom: none;
   background-color: rgba(242, 233, 228, 0.5);
 }
+.cityblock {
+  margin-bottom: 10px;
+}
 
 .justify-content-around {
   height: 260px;
