--- a/src/styles.css
+++ b/src/styles.css
@@ -61,19 +61,18 @@ h3 {
   color: #b392ac;
 }
 .row {
-  padding: 20px 20px 20px 20px;
   align-items: center;
   margin-bottom: 3px;
   border-bottom: 10px;
   height: 280px;
-  padding-bottom: none;
+  padding: none;
 }
 
 p {
   font-family: "Indie Flower", cursive;
   margin-top: 5%;
   text-align: center;
-  font-size: 18px;
+  font-size: 22px;
 }
 
 .icon img {
