--- a/src/styles.css
+++ b/src/styles.css
@@ -44,7 +44,7 @@ h3 {
   margin-bottom: 5%;
   font-size: 40px;
 }
-.weatherdescription {
+.description {
   color: aliceblue;
   font-family: "Indie Flower", cursive;
   font-size: 30px;
