--- a/src/styles.css
+++ b/src/styles.css
@@ -55,7 +55,7 @@ h3 {
   font-size: 20px;
 }
 
-.precipitation {
+.humidity {
   color: aliceblue;
   font-family: "Indie Flower", cursive;
   font-size: 20px;
