--- a/src/styles.css
+++ b/src/styles.css
@@ -44,6 +44,9 @@ h3 {
   margin-bottom: 5%;
   font-size: 40px;
 }
+.iconcolumn {
+  border: double;
+}
 .description {
   color: aliceblue;
   font-family: "Indie Flower", cursive;
