--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,10 @@ body {
   margin-top: 3%;
   margin-bottom: 3%;
 }
+.topblock {
+  display: block;
+  text-align: center;
+}
 .weatherapp {
   border: double;
   border-color: aliceblue;
