--- a/src/styles.css
+++ b/src/styles.css
@@ -4,10 +4,11 @@ body {
 .container {
   margin-top: 3%;
   margin-bottom: 3%;
+  align-items: center;
 }
 .topblock {
   display: block;
-  text-align: center;
+  align-items: center;
 }
 .weatherapp {
   border: double;
