--- a/src/styles.css
+++ b/src/styles.css
@@ -7,8 +7,8 @@ body {
   align-items: center;
 }
 .topblock {
-  display: block;
   align-items: center;
+  margin: 0 auto;
 }
 .weatherapp {
   border: double;
