--- a/src/styles.css
+++ b/src/styles.css
@@ -83,6 +83,7 @@ h3 {
   text-align: center;
   font-family: "Indie Flower", cursive;
   color: #b392ac;
+  font-size: 22px;
 }
 .row {
   align-items: center;
