--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 body {
   background-image: url("https://cdn.shopify.com/s/files/1/1555/7781/products/Cloudy_Night_SMALL_1080x.jpg?v=1538052354");
+  background-repeat: no-repeat;
 }
 .container {
   margin-top: 3%;
